--- a/part1/ordo_nrj.tex
+++ b/part1/ordo_nrj.tex
@@ -1,6 +1,6 @@
 
 \section{L'ordonnancement sous contraintes énergétiques}
- 
+\label{sec:ordo_nrj} 
 La modélisation présentée dans cette section repose sur le problème
 d'ordonnancement continu à contraintes
 énergétiques~\cite{ArtiguesLopez}, le \CECSP.
