--- a/part2/CECSP/time_filter.tex
+++ b/part2/CECSP/time_filter.tex
@@ -157,12 +157,12 @@ ressource. Ce profil obligatoire est défini comme la somme des parties
 obligatoires de toutes les activités. 
 
 
-\begin{defi}
-Le {\bf profil obligatoire} d'une ressource $TT_{\cal A}$ est définie par la
-fonction suivante: $TT_{\cal A}(t)= \sum_{\substack{i \in {\cal A}\\ \overline{s}_i \le
-t < \underline{e}_i}} \bmin,\ \forall t \in {\cal T}$.
-Le problème n'admet pas de solution si $\exists t \in {\cal T}\ :
-\ TT_{\cal A}(t) > B$. 
+\begin{defi} Le {\bf profil obligatoire} d'une ressource $TT_{\cal A}$
+est définie par la fonction suivante: $TT_{\cal A}(t)=
+\sum_{\substack{i \in {\cal A}\\ \overline{s}_i \le t <
+\underline{e}_i}} \bmin,\ \forall t \in {\cal T}$.  Le problème
+n'admet pas de solution si $\exists t \in {\cal T}\ : \ TT_{\cal A}(t)
+> R$.
 \end{defi}
 
 
