--- a/part2/CuSP/cumulative.tex
+++ b/part2/CuSP/cumulative.tex
@@ -429,6 +429,18 @@ début d'activité selon la règle suivante:
 \end{reg}
 
 \begin{ex}
+Soient $i$ et $j$ les deux activités suivantes: 
+\begin{center}
+  \begin{tabular}{|P{1cm}P{1cm}P{1cm}P{1cm}|}
+    \hline
+    \ES & \LE & p_i & b_i  \\
+    \hline
+    1 & 14 & 8 & 2 \\
+    1 & 14 & 8 & 2 \\    
+    \hline
+  \end{tabular}
+\end{center}
+
   \begin{figure}[htb!]
     \centering
     \begin{tikzpicture}
@@ -440,8 +452,7 @@ début d'activité selon la règle suivante:
       
       \fill[draw=black,gray!50] (0,0) rectangle (8,3) node[midway,above,color=black]
       {$st_i=\ES$};
-      \draw (0,0) -- (0,2) -- (2,2) -- (2,4) -- 
-      (5,4) -- (5,1) -- (9,1) -- (9,3) -- (11,3) -- (11,0);
+
       \draw[->] (-1,0) -- (12.5,0);
       \draw[dashed] (-1,5) -- (12.5,5);
       \draw[->] (-1,0) -- (-1,3.5) node[left] {$R=3$};
@@ -453,6 +464,8 @@ début d'activité selon la règle suivante:
     \label{fig:disj_CUSP}
   \end{figure}
 \end{ex}
+
+
 
 \subsubsection{Règles de filtrage énergétiques}
  et le raisonnement
