--- a/newcommand.tex
+++ b/newcommand.tex
@@ -39,7 +39,7 @@
 \newtheorem{ex}{Exemple}[section]
 \newtheorem{lemma}{Lemme}[chapter]
 \newtheorem{prop}{Proposition}[chapter]
-\newtheorem{reg}{Règle}
+\newtheorem{reg}{Règle}[part]
 %%%%%%%%%% TIKZ %%%%%%%%%%%%%
 
 \tikzset{every node/.style={circle,minimum size=0pt,node
