--- a/newcommand.tex
+++ b/newcommand.tex
@@ -22,8 +22,9 @@
 
 \newcommandx{\bb}[3][1=i,2=t_1,3=t_2]{\underline{b}(#1,#2,#3)}
 \newcommandx{\wb}[3][1=i,2=t_1,3=t_2]{\underline{w}(#1,#2,#3)}
-\newcommandx{\conv}[1][1=W_i]{CR\left(#1,t_1,t_2\right)}
-
+\newcommandx{\wbLS}[3][1=i,2=t_1,3=t_2]{\underline{w}_{LS}(#1,#2,#3)}
+\newcommandx{\wbRS}[3][1=i,2=t_1,3=t_2]{\underline{w}_{RS}(#1,#2,#3)}
+\newcommandx{\wbCS}[3][1=i,2=t_1,3=t_2]{\underline{w}_{CS}(#1,#2,#3)}
 
 \newcommandx{\Em}[1][1=2n]{\E\setminus\{#1\}}
 \newcommand\E{{\cal E}}
